tests/reference/asr_preprocess-cpp_err1-3303e2d.stderr
C preprocessor error: factor(): The expression is not complete, expecting integer, name, +, - or (
 --> tests/errors/cpp_err1.f90:1:9
  |
1 | program cpp_err1
  |         ^ 
